[package]
name = "live-reload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-channel = "2.2.0"
axum = { version = "0.7.4", features = ["tokio", "ws"] }
clap = { version = "4.5.2", features = ["derive"] }
hyper = "1.2.0"
mime = "0.3.17"
mime_guess = "2.0.4"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
